2008-08-21  Cody Russell  <bratsche@gnome.org>

	* gdk/win32/gdkevents-win32.c (doesnt_want_key): Remove the checks
	to see if the window is modally blocked.  This doesn't get us anything,
	and it confuses the search window in GtkTreeView (and potentially other
	utility windows in other apps).  (#520165)

2008-08-21  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktreeview.c (gtk_tree_view_realize): small formatting fix.

2008-08-21  Marek Kasik  <mkasik@redhat.com>

	Bug 545875 – evo crashed when trying to print pages 6-7 of a 1 page
	email

	* gtk/gtkprintoperation.c: Clamp page ranges to correct ranges

2008-08-21  Marek Kasik  <mkasik@redhat.com>

	* ChangeLog: changelog update for previous commit

2008-08-21  Marek Kasik  <mkasik@redhat.com>

	Bug 535158 – can't rearrange the order of multi pages per side

	* gtk/gtkprinter.c
	* gtk/gtkprinter.h
	* gtk/gtkprintunixdialog.c
	* gtk/gtkprintsettings.c
	* gtk/gtkprintsettings.h
	* gtk/gtkenums.h
	* modules/printbackends/cups/gtkprintbackendcups.c: Allow user to
	specify layout of pages per sheet in number-up mode

Wed Aug 20 18:16:29 2008  Søren Sandmann  <sandmann@redhat.com>

	* gdk/x11/gdkscreen-x11.c (_gdk_x11_screen_size_changed): Emit the
	monitors changed signal when the screen size changes.

2008-08-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Bug 548346 – gtk_color_selection_dialog_get_color_selection always
	returns NULL

	* gtk/gtkcolorseldialog.c
	(gtk_color_selection_dialog_get_color_selection): Use the correct
	macro to test the validity of the passed-in dialog.

2008-08-05  Milan Crha  <mcrha@redhat.com>

	* gtk/gtknotebook.c: (gtk_notebook_do_arrow): Allow changing page with
	arrows even on non-focusable notebook. (#528091)

2008-08-19  Federico Mena Quintero  <federico@novell.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=543308 - The file
	chooser in "compact" mode uses the same size as in "open" mode.

	* gtk/gtkfilechooserdialog.c (gtk_file_chooser_dialog_map): Don't